--- a/html/historia/img360.html
+++ b/html/historia/img360.html
@@ -41,7 +41,7 @@
                 <div class="card bg-transparent border-0 card_wh">
                   <img
                     id="1"
-                    src="https://cloudflare1.360gigapixels.com/pano/franvalver/01646926_Panoramica_360_Dolmen_de_los_Gabrieles.jpg/equirect_crop_3_1/6.jpg"
+                    src="../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg"
                     class="card-img-top rounded-top change"
                     alt="img 1"
                   />
@@ -56,7 +56,7 @@
                 <div class="card bg-transparent border-0 card_wh">
                   <img
                     id="2"
-                    src="https://cdn.pixabay.com/photo/2018/07/11/16/34/landscape-3531355_960_720.jpg"
+                    src="../../media/Laskorain_HH4_1Solairua_Zentzumen_Txokoa1_29.jpeg"
                     class="card-img-top rounded-top change"
                     alt="img 2"
                   />
@@ -71,7 +71,7 @@
                 <div class="card bg-transparent border-0 card_wh">
                   <img
                     id="3"
-                    src="https://cdn.pixabay.com/photo/2018/07/11/16/35/beach-3531358_960_720.jpg"
+                    src="../../media/02_Jose_Arana.jpeg"
                     class="card-img-top rounded-top change"
                     alt="img 3"
                   />
@@ -85,7 +85,7 @@
               <div class="col mb-5">
                 <div class="card bg-transparent border-0 card_wh">
                   <img
-                    src="https://cdn.pixabay.com/photo/2021/02/01/06/58/panorama-5969540_960_720.jpg"
+                    src="../../media/15_Jose_Arana.jpeg"
                     class="card-img-top rounded-top change"
                     alt="img 3"
                   />
@@ -99,7 +99,7 @@
               <div class="col mb-5">
                 <div class="card bg-transparent border-0 card_wh">
                   <img
-                    src="https://cloudflare1.360gigapixels.com/pano/franvalver/01646926_Panoramica_360_Dolmen_de_los_Gabrieles.jpg/equirect_crop_3_1/6.jpg"
+                    src="../../media/20_Jose_Arana.jpeg"
                     class="card-img-top rounded-top change"
                     alt="img 3"
                   />
@@ -113,7 +113,7 @@
               <div class="col mb-5">
                 <div class="card bg-transparent border-0 card_wh">
                   <img
-                    src="https://cdn.pixabay.com/photo/2018/07/11/16/34/landscape-3531355_960_720.jpg"
+                    src="../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg"
                     class="card-img-top rounded-top change"
                     alt="img 3"
                   />
@@ -127,7 +127,7 @@
               <div class="col mb-5">
                 <div class="card bg-transparent border-0 card_wh">
                   <img
-                    src="https://cdn.pixabay.com/photo/2018/07/11/16/35/beach-3531358_960_720.jpg"
+                    src="../../media/Laskorain_HH4_1Solairua_Zentzumen_Txokoa1_29.jpeg"
                     class="card-img-top rounded-top change"
                     alt="img 3"
                   />
@@ -141,7 +141,7 @@
               <div class="col mb-5">
                 <div class="card bg-transparent border-0 card_wh">
                   <img
-                    src="https://cdn.pixabay.com/photo/2021/02/01/06/58/panorama-5969540_960_720.jpg"
+                    src="../../media/02_Jose_Arana.jpeg"
                     class="card-img-top rounded-top change"
                     alt="img 3"
                   />
@@ -155,7 +155,7 @@
               <div class="col mb-5">
                 <div class="card bg-transparent border-0 card_wh">
                   <img
-                    src="https://cloudflare1.360gigapixels.com/pano/franvalver/01646926_Panoramica_360_Dolmen_de_los_Gabrieles.jpg/equirect_crop_3_1/6.jpg"
+                    src="../../media/15_Jose_Arana.jpeg"
                     class="card-img-top rounded-top change"
                     alt="img 3"
                   />
@@ -193,7 +193,6 @@
           $("#scene360").attr("src", this.src);
           $("#ocultar-galeria").css("display", "none");
           $("#activar-vista-360").css("display", "block");
-          console.log(this.src);
         });
       });
     </script>
