--- a/html/investigacion/img360.html
+++ b/html/investigacion/img360.html
@@ -23,7 +23,7 @@
             </div>
             <a-scene>
                 <a-sky   
-                src = "https://cloudflare1.360gigapixels.com/pano/franvalver/01646926_Panoramica_360_Dolmen_de_los_Gabrieles.jpg/equirect_crop_3_1/6.jpg"
+                src = "../../media/20_Jose_Arana.jpeg"
                 rotation="0 -100 0"
                 radius="50"></a-sky >
             </a-scene >
