--- a/html/mandubi/galeriaVR.html
+++ b/html/mandubi/galeriaVR.html
@@ -1,72 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mandubi Trikuharria</title>
-    <link rel="stylesheet" href="../../css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <!-- fuentes de google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <!-- libreria  para VR -->
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <!-- libreria  para model viewer -->
+    <script
+      type="module"
+      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
+    ></script>
+    <!-- libreria Jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  </head>
+  <body>
     <!-- Panel Galería de imágenes -->
     <div class="flex_container">
-        <section class="container_info container_info_maps ps-5 pe-5">
-            <div class="d-flex justify-content-between"><!-- no tiene asignado estilo -->
-                <div>
-                    <button class="lang fs-4 fw-bolder" onclick="history.back()">Atrás</button>
-                    <button class="lang fs-4 fw-bolder">Idioma</button>
-                </div>
-                <div>
-                    <button class="lang fs-4 fw-bolder play">Play</button>
-                    <button class="lang fs-4 fw-bolder">Reset</button>
-                </div>
+      <section class="container_info container_info_maps ps-5 pe-5">
+        <div class="d-flex justify-content-between">
+          <!-- no tiene asignado estilo -->
+          <div>
+            <button class="lang fs-4 fw-bolder" onclick="history.back()">
+              Atrás
+            </button>
+            <button class="lang fs-4 fw-bolder">Idioma</button>
+          </div>
+          <div>
+            <button class="lang fs-4 fw-bolder play">Play</button>
+            <button class="lang fs-4 fw-bolder">Reset</button>
+          </div>
+        </div>
+        <!-- contenedor de imagen central -->
+        <article class="img_galery_container">
+          <!--contenedor de modelo 3D-->
+          <div class="img-ampliada">
+            <model-viewer
+              id="Vr"
+              class="Model3d"
+              bounds="tight"
+              src="../../media/Barca_01.glb"
+              ar
+              ar-modes="webxr scene-viewer quick-look"
+              camera-controls
+              environment-image="neutral"
+              poster="poster.webp"
+              shadow-intensity="1"
+              autoplay
+            >
+              <div class="progress-bar hide" slot="progress-bar">
+                <div class="update-bar"></div>
+              </div>
+              <button slot="ar-button" id="ar-button">
+                View in your space
+              </button>
+              <div id="ar-prompt" style="display: none;"> <!-- cambiar si se desea ver la mano con movil en la imagen -->
+                <img
+                  src="https://modelviewer.dev/shared-assets/icons/hand.png"
+                />
+              </div>
+            </model-viewer>
+          </div>
+          <!-- Selector de imágenes -->
+          <div class="carousel">
+            <div class="container-carousel-img">
+              <div class="img-carousel">
+                <model-viewer
+                  class="Model3d changeVr"
+                  bounds="tight"
+                  src="../../media/Barca_01.glb"
+                  ar
+                  ar-modes="webxr scene-viewer quick-look"
+                  environment-image="neutral"
+                  poster="poster.webp"
+                  shadow-intensity="1"
+                ></model-viewer>
+              </div>
+              <div class="img-carousel">
+                <model-viewer
+                  class="Model3d changeVr"
+                  bounds="tight"
+                  src="../../media/Capitan America (1).glb"
+                  ar
+                  ar-modes="webxr scene-viewer quick-look"
+                  environment-image="neutral"
+                  poster="poster.webp"
+                  shadow-intensity="1"
+                ></model-viewer>
+              </div>
+              <div class="img-carousel">
+                <model-viewer
+                  class="Model3d changeVr"
+                  bounds="tight"
+                  src="../../media/GLB_Arbol_01.glb"
+                  ar
+                  ar-modes="webxr scene-viewer quick-look"
+                  environment-image="neutral"
+                  poster="poster.webp"
+                  shadow-intensity="1"
+                ></model-viewer>
+              </div>
+              <div class="img-carousel">
+                <model-viewer
+                  class="Model3d changeVr"
+                  bounds="tight"
+                  src="../../media/GLB_Coche_03.glb"
+                  ar
+                  ar-modes="webxr scene-viewer quick-look"
+                  environment-image="neutral"
+                  poster="poster.webp"
+                  shadow-intensity="1"
+                ></model-viewer>
+              </div>
+              <div class="img-carousel">
+                <model-viewer
+                  class="Model3d changeVr"
+                  bounds="tight"
+                  src="../../media/GLB_Jaguar.glb"
+                  ar
+                  ar-modes="webxr scene-viewer quick-look"
+                  environment-image="neutral"
+                  poster="poster.webp"
+                  shadow-intensity="1"
+                ></model-viewer>
+              </div>
             </div>
-            <!-- contenedor de imagen central -->
-            <article class="img_galery_container">
-                <!--contenedor de modelo 3D-->
-                <div class="img-ampliada">
-                    <model-viewer 
-                    id="model-3d" 
-                    camera-controls 
-                    poster="" 
-                    src="" 
-                    alt="modelo 3D"></model-viewer>
-                </div>
-                <!-- Selector de imágenes -->
-                <div class="carousel">
-                    <div class="container-carousel-img">
-                        <img src="#" alt="imagen 1" class="img-carousel">
-                        <img src="#" alt="imagen 2" class="img-carousel">
-                        <img src="#" alt="imagen 3" class="img-carousel">
-                        <img src="#" alt="imagen 4" class="img-carousel">
-                        <img src="#" alt="imagen 5" class="img-carousel">
-                    </div>
-                    <div class="button-carousel">
-                        <img class="select" src="../../media/anterior.png" alt="anterior">
-                        <img class="select" src="../../media/proximo.png" alt="proximo">
-                    </div>
-                </div> 
-            </article>
-        </section>
-        <nav class="nav_bar_maps">
-            <h1 class="title fs-2 h-25 m-0 mb-2 border-bottom border-white border-3 d-flex align-items-center">Información de interés</h1>
-            <ul class="container_text_maps">
-                <li class="fs-4">Nombre</li>
-                <li class="fs-4">Tamaño</li>
-                <li class="fs-4">Fecha</li>
-                <li class="fs-4">Material</li>
-                <li class="fs-4">Utilidad</li>
-                <li class="fs-4">...</li>
-            </ul>
-        </nav>
+          </div>
+        </article>
+      </section>
+      <nav class="nav_bar_maps">
+        <h1
+          class="title fs-2 h-25 m-0 mb-2 border-bottom border-white border-3 d-flex align-items-center"
+        >
+          Información de interés
+        </h1>
+        <ul class="container_text_maps">
+          <li class="fs-4">Nombre</li>
+          <li class="fs-4">Tamaño</li>
+          <li class="fs-4">Fecha</li>
+          <li class="fs-4">Material</li>
+          <li class="fs-4">Utilidad</li>
+          <li class="fs-4">...</li>
+        </ul>
+      </nav>
     </div>
-    
-</body>
+    <!-- Script Jquery para cambiar la vista de la imágen seleccionada a 360º-->
+    <script>
+      $(document).ready(function changeVr() {
+        $(".changeVr").click(function vrSrc() {
+          $("#Vr").attr("src", this.src);
+        });
+      });
+    </script>
+  </body>
 </html>
