--- a/html/mandubi/img360.html
+++ b/html/mandubi/img360.html
@@ -22,7 +22,7 @@
             </div>
             <a-scene>
                 <a-sky   
-                src = "https://cloudflare1.360gigapixels.com/pano/franvalver/01646926_Panoramica_360_Dolmen_de_los_Gabrieles.jpg/equirect_crop_3_1/6.jpg"
+                src = "../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg"
                 rotation="0 -100 0"
                 radius="50"></a-sky >
             </a-scene >
