--- a/html/mandubi/galeria.html
+++ b/html/mandubi/galeria.html
@@ -21,22 +21,48 @@
                 <button class="lang fs-4 fw-bolder">Idioma</button>
             </div>
             <article class="contenedor">
-              <div class="img-ampliada">
-                  <img src="#" alt="imágen seleccionada">
-              </div>
-              <div class="carousel">
-                  <div class="container-carousel-img">
-                      <img src="#" alt="imagen 1" class="img-carousel">
-                      <img src="#" alt="imagen 2" class="img-carousel">
-                      <img src="#" alt="imagen 3" class="img-carousel">
-                      <img src="#" alt="imagen 4" class="img-carousel">
-                      <img src="#" alt="imagen 5" class="img-carousel">
-                  </div>
-                  <div class="button-carousel">
-                      <img class="select" src="../../media/anterior.png" alt="anterior">
-                      <img class="select" src="../../media/proximo.png" alt="proximo">
-                  </div>
-              </div> 
+                <article class="img_galery_container">
+                    <div class="img-ampliada slider">
+                        <img id="imgGalery" src="../../media/02_Jose_Arana.jpeg" alt="">
+                    </div>
+                    <div class="carousel">
+                        <div class="container-carousel-img">
+                            <div class="img-carousel">
+                                <img class="imgItems" src="../../media/02_Jose_Arana.jpeg" alt="">
+                            </div>
+                            <div class="img-carousel">
+                                <img class="imgItems" src="../../media/15_Jose_Arana.jpeg" alt="">
+                            </div>
+                            <div class="img-carousel">
+                                <img class="imgItems" src="../../media/dolmen-2.jpg" alt="">
+                            </div>
+                            <div class="img-carousel">
+                                <img class="imgItems" src="../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg" alt="">
+                            </div>
+                            <div class="img-carousel">
+                                <img class="imgItems" src="../../media/Laskorain_HH4_1Solairua_Zentzumen_Txokoa1_29.jpeg" alt="">
+                            </div>
+                        </div>
+                        <nav class="slider-nav">
+                        <ul>
+                          <li class="arrow">
+                            <button class="previous">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                                  <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+                                </svg>
+                            </button>
+                          </li>
+                          <li class="arrow">
+                            <button class="next">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                                </svg>
+                            </button>
+                          </li>
+                        </ul>
+                        </nav>
+                    </div>
+                </article>
           </article>
         </section>
         <nav class="nav_bar_maps">
@@ -49,5 +75,6 @@
             </ul>
         </nav>
     </div>
+    <script src="../../js/main.js"></script>
 </body>
 </html>
