función botones cambio de imagnes (360 y vr) y cambios de información

--- a/html/historia/img360.html
+++ b/html/historia/img360.html
@@ -13,15 +13,17 @@
       crossorigin="anonymous"
     />
     <!-- fuentes de google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <script src="../../js/main.js"></script>
     <!-- libreria A-FRAME -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <!-- libreria Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    
   </head>
   <body>
     <!-- INICIO Galería de imagenes 360º -->
