--- a/html/historia/galeria.html
+++ b/html/historia/galeria.html
@@ -1,81 +1,131 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mandubi Trikuharria</title>
-    <link rel="stylesheet" href="../../css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <!-- fuentes de google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- Panel Galería de imágenes -->
     <div class="flex_container">
-        <section class="container_info container_info_maps ps-5 pe-5">
-            <div class="container_button">
-                <button class="lang fs-4 fw-bolder" onclick="history.back()">Atrás</button>
-                <button class="lang fs-4 fw-bolder">Idioma</button>
+      <section class="container_info container_info_maps ps-5 pe-5">
+        <div class="container_button">
+          <button class="lang fs-4 fw-bolder" onclick="history.back()">
+            Atrás
+          </button>
+          <button class="lang fs-4 fw-bolder">Idioma</button>
+        </div>
+        <!-- contenedor de imagen central -->
+        <article class="contenedor">
+          <article class="img_galery_container">
+            <div class="img-ampliada slider">
+              <img id="imgGalery" src="../../media/02_Jose_Arana.jpeg" alt="" />
             </div>
-            <!-- contenedor de imagen central -->
-            <article class="contenedor">
-                <article class="img_galery_container">
-                    <div class="img-ampliada slider">
-                        <img id="imgGalery" src="../../media/02_Jose_Arana.jpeg" alt="">
-                    </div>
-                    <div class="carousel">
-                        <div class="container-carousel-img">
-                            <div class="img-carousel">
-                                <img class="imgItems" src="../../media/02_Jose_Arana.jpeg" alt="">
-                            </div>
-                            <div class="img-carousel">
-                                <img class="imgItems" src="../../media/15_Jose_Arana.jpeg" alt="">
-                            </div>
-                            <div class="img-carousel">
-                                <img class="imgItems" src="../../media/dolmen-2.jpg" alt="">
-                            </div>
-                            <div class="img-carousel">
-                                <img class="imgItems" src="../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg" alt="">
-                            </div>
-                            <div class="img-carousel">
-                                <img class="imgItems" src="../../media/Laskorain_HH4_1Solairua_Zentzumen_Txokoa1_29.jpeg" alt="">
-                            </div>
-                        </div>
-                        <nav class="slider-nav">
-                        <ul>
-                          <li class="arrow">
-                            <button class="previous">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
-                                  <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-                                </svg>
-                            </button>
-                          </li>
-                          <li class="arrow">
-                            <button class="next">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
-                                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-                                </svg>
-                            </button>
-                          </li>
-                        </ul>
-                        </nav>
-                    </div>
-                </article>
+            <div class="carousel">
+              <div class="container-carousel-img">
+                <div class="img-carousel">
+                  <img
+                    class="imgItems"
+                    src="../../media/02_Jose_Arana.jpeg"
+                    alt=""
+                  />
+                </div>
+                <div class="img-carousel">
+                  <img
+                    class="imgItems"
+                    src="../../media/15_Jose_Arana.jpeg"
+                    alt=""
+                  />
+                </div>
+                <div class="img-carousel">
+                  <img class="imgItems" src="../../media/dolmen-2.jpg" alt="" />
+                </div>
+                <div class="img-carousel">
+                  <img
+                    class="imgItems"
+                    src="../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg"
+                    alt=""
+                  />
+                </div>
+                <div class="img-carousel">
+                  <img
+                    class="imgItems"
+                    src="../../media/Laskorain_HH4_1Solairua_Zentzumen_Txokoa1_29.jpeg"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <nav class="slider-nav">
+                <ul>
+                  <li class="arrow">
+                    <button class="previous" onclick="showPreviousItem()">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-chevron-left"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          fill-rule="evenodd"
+                          d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
+                        />
+                      </svg>
+                    </button>
+                  </li>
+                  <li class="arrow">
+                    <button class="next" onclick="showNextItem()">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-chevron-right"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          fill-rule="evenodd"
+                          d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"
+                        />
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
+              </nav>
+            </div>
           </article>
-        </section>
-        <nav class="nav_bar_maps">
-            <h1 class="title fs-2">Información de interés</h1>
-            <ul class="container_text_maps">
-                <li class="fs-4">Nombre</li>
-                <li class="fs-4">Ubicación</li>
-                <li class="fs-4">Fecha</li>
-                <li class="fs-4">...</li>
-            </ul>
-        </nav>
+        </article>
+      </section>
+      <nav class="nav_bar_maps">
+        <h1
+          class="title fs-2 h-25 m-0 mb-2 border-bottom border-white border-3 d-flex align-items-center"
+        >
+          Información de interés
+        </h1>
+        <ul class="container_text_maps">
+          <li class="fs-4">Nombre Jose Arana 02</li>
+          <li class="fs-4">Ubicación</li>
+          <li class="fs-4">Fecha</li>
+          <li class="fs-4">...</li>
+        </ul>
+      </nav>
     </div>
     <script src="../../js/main.js"></script>
-</body>
+  </body>
 </html>
