--- a/html/mandubi/galeria.html
+++ b/html/mandubi/galeria.html
@@ -46,14 +46,14 @@
                         <nav class="slider-nav">
                         <ul>
                           <li class="arrow">
-                            <button class="previous">
+                            <button class="previous" onclick="showPreviousItem()">
                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
                                   <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
                                 </svg>
                             </button>
                           </li>
                           <li class="arrow">
-                            <button class="next">
+                            <button class="next" onclick="showNextItem()">
                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
                                   <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
                                 </svg>
@@ -68,7 +68,7 @@
         <nav class="nav_bar_maps">
             <h1 class="title fs-2 h-25 m-0 mb-2 border-bottom border-white border-3 d-flex align-items-center">Información de interés</h1>
             <ul class="container_text_maps">
-                <li class="fs-4">Nombre</li>
+                <li class="fs-4">Nombre Jose Arana 02</li>
                 <li class="fs-4">Ubicación</li>
                 <li class="fs-4">Fecha</li>
                 <li class="fs-4">...</li>
