mejoras en el selector de imágenes y cambio descriptivo de las mismas

--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Panel mapa de los dólmenes -->
     <div class="flex_container">
-        <section class="container_info container_info_maps ps-5 pe-5">
+        <section class="container_info ps-5 pe-5">
             <div class="container_button">
                 <button class="lang fs-4 fw-bolder" onclick="history.back()">Atrás</button>
                 <button class="lang fs-4 fw-bolder">Idioma</button>
