--- a/html/mandubi/galeria.html
+++ b/html/mandubi/galeria.html
@@ -20,53 +20,49 @@
                 <button class="lang fs-4 fw-bolder" onclick="history.back()">Atrás</button>
                 <button class="lang fs-4 fw-bolder">Idioma</button>
             </div>
-            <article class="contenedor">
-                <article class="img_galery_container">
-                    <div class="img-ampliada slider">
-                        <img id="imgGalery" src="../../media/02_Jose_Arana.jpeg" alt="">
+            <article class="contenedor galeria">
+                <div class="img-ampliada slider">
+                  <img id="imgGalery" src="../../media/02_Jose_Arana.jpeg" alt="" />
+                </div>
+                <div class="carousel">
+                  <div class="container-carousel-img">
+                    <div class="img-carousel">
+                      <img
+                        class="imgItems"
+                        src="../../media/02_Jose_Arana.jpeg"
+                        alt=""
+                      />
                     </div>
-                    <div class="carousel">
-                        <div class="container-carousel-img">
-                            <div class="img-carousel">
-                                <img class="imgItems" src="../../media/02_Jose_Arana.jpeg" alt="">
-                            </div>
-                            <div class="img-carousel">
-                                <img class="imgItems" src="../../media/15_Jose_Arana.jpeg" alt="">
-                            </div>
-                            <div class="img-carousel">
-                                <img class="imgItems" src="../../media/dolmen-2.jpg" alt="">
-                            </div>
-                            <div class="img-carousel">
-                                <img class="imgItems" src="../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg" alt="">
-                            </div>
-                            <div class="img-carousel">
-                                <img class="imgItems" src="../../media/Laskorain_HH4_1Solairua_Zentzumen_Txokoa1_29.jpeg" alt="">
-                            </div>
-                        </div>
-                        <nav class="slider-nav">
-                        <ul>
-                          <li class="arrow">
-                            <button class="previous" onclick="showPreviousItem()">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
-                                  <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-                                </svg>
-                            </button>
-                          </li>
-                          <li class="arrow">
-                            <button class="next" onclick="showNextItem()">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
-                                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-                                </svg>
-                            </button>
-                          </li>
-                        </ul>
-                        </nav>
+                    <div class="img-carousel">
+                      <img
+                        class="imgItems"
+                        src="../../media/15_Jose_Arana.jpeg"
+                        alt=""
+                      />
                     </div>
-                </article>
-          </article>
+                    <div class="img-carousel">
+                      <img class="imgItems" src="../../media/dolmen-2.jpg" alt="" />
+                    </div>
+                    <div class="img-carousel">
+                      <img
+                        class="imgItems"
+                        src="../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg"
+                        alt=""
+                      />
+                    </div>
+                    <div class="img-carousel">
+                      <img
+                        class="imgItems"
+                        src="../../media/Laskorain_HH4_1Solairua_Zentzumen_Txokoa1_29.jpeg"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                </div>
+            </article>
         </section>
         <nav class="nav_bar_maps">
-            <h1 class="title fs-2 h-25 m-0 mb-2 border-bottom border-white border-3 d-flex align-items-center">Información de interés</h1>
+            <h1 class="title fs-2 me-0 ms-0 h-md-25 mb-2 border-bottom border-white border-3 d-flex justify-content-center align-items-center">Información de interés</h1>
             <ul class="container_text_maps">
                 <li class="fs-4">Nombre Jose Arana 02</li>
                 <li class="fs-4">Ubicación</li>
