cambios en index principal y ajustes para diseño movil

--- a/html/investigacion/galeria.html
+++ b/html/investigacion/galeria.html
@@ -20,14 +20,14 @@
   <body>
     <!-- Panel Galería de imágenes -->
     <div class="flex_container">
-      <section class="container_info container_info_maps ps-5 pe-5">
+      <section class="container_info container_info_maps">
         <div class="container_button">
-          <button class="lang fs-4 fw-bolder" onclick="history.back()">
+          <button class="lang fs-5 fw-bolder" onclick="history.back()">
             Atrás
           </button>
-          <button class="lang fs-4 fw-bolder">Idioma</button>
+          <button class="lang fs-5 fw-bolder">Idioma</button>
         </div>
-        <article class="contenedor galeria">
+        <article class="contenedor galeria ps-4 pe-4">
           <div class="img-ampliada slider">
             <img id="imgGalery" src="../../media/02_Jose_Arana.jpeg" alt="" />
           </div>
@@ -70,7 +70,7 @@
       </section>
       <nav class="nav_bar_maps">
         <h1
-          class="title fs-2 h-25 m-0 mb-2 border-bottom border-white border-3 d-flex align-items-center"
+          class="title fs-2 pb-3 m-0 mb-2 border-bottom border-white border-3 d-flex justify-content-center align-items-center"
         >
           Información de interés
         </h1>
