--- a/html/investigacion/investigacion.html
+++ b/html/investigacion/investigacion.html
@@ -15,12 +15,12 @@
 <body>
     <!-- Panel Investigación -->
     <div class="flex_container"> <!-- cambiar -->
-        <section class="container_info container_info_dolmenes ps-5 pe-5">
+        <section class="container_info container_info_dolmenes">
             <div class="container_button">
-                <button class="lang fs-4 fw-bolder" onclick="history.back()">Atrás</button>
-                <button class="lang fs-4 fw-bolder">Idioma</button>
+                <button class="lang fs-5 fw-bolder" onclick="history.back()">Atrás</button>
+                <button class="lang fs-5 fw-bolder">Idioma</button>
             </div>
-            <article class="overflow-auto contariner_cards_scroll pt-2">
+            <article class="overflow-auto contariner_cards_scroll pt-2 ps-4 pe-4">
                 <h1 class="title fs-1">Investigación de la excavación de Mandubi</h1>
                 <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
                     nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
