--- a/html/mandubi/galeria.html
+++ b/html/mandubi/galeria.html
@@ -15,12 +15,12 @@
 <body>
     <!-- Panel Galería de imágenes -->
     <div class="flex_container">
-        <section class="container_info container_info_maps ps-5 pe-5">
+        <section class="container_info container_info_maps">
             <div class="container_button">
-                <button class="lang fs-4 fw-bolder" onclick="history.back()">Atrás</button>
-                <button class="lang fs-4 fw-bolder">Idioma</button>
+                <button class="lang fs-5 fw-bolder" onclick="history.back()">Atrás</button>
+                <button class="lang fs-5 fw-bolder">Idioma</button>
             </div>
-            <article class="contenedor galeria">
+            <article class="contenedor galeria ps-4 pe-4">
                 <div class="img-ampliada slider">
                   <img id="imgGalery" src="../../media/02_Jose_Arana.jpeg" alt="" />
                 </div>
@@ -62,7 +62,7 @@
             </article>
         </section>
         <nav class="nav_bar_maps">
-            <h1 class="title fs-2 me-0 ms-0 h-md-25 mb-2 border-bottom border-white border-3 d-flex justify-content-center align-items-center">Información de interés</h1>
+            <h1 class="title fs-2 pb-3 me-0 ms-0 mb-2 border-bottom border-white border-3 d-flex justify-content-center align-items-center">Información de interés</h1>
             <ul class="container_text_maps">
                 <li class="fs-4">Nombre Jose Arana 02</li>
                 <li class="fs-4">Ubicación</li>
