--- a/html/mandubi/mapa.html
+++ b/html/mandubi/mapa.html
@@ -15,17 +15,17 @@
 <body>
     <!-- Panel mapa mandubi -->
     <div class="flex_container">
-        <section class="container_info ps-5 pe-5">
+        <section class="container_info">
             <div class="container_button">
-                <button class="lang fs-4 fw-bolder" onclick="history.back()">Atrás</button>
-                <button class="lang fs-4 fw-bolder">Idioma</button>
+                <button class="lang fs-5 fw-bolder" onclick="history.back()">Atrás</button>
+                <button class="lang fs-5 fw-bolder">Idioma</button>
             </div>
-            <article class="maps_container">
+            <article class="maps_container ps-4 pe-4">
                 <img src="#" alt="imágen del mapa">
             </article>
         </section>
         <nav class="nav_bar_maps">
-            <ol class="p-0 m-0 h-25 mb-2 border-bottom border-white border-3">
+            <ol class="p-0 m-0 mb-2 border-bottom border-white border-3">
                 <li class="button_nav_bar text_center d-flex justify-content-center"><a class="fs-2 text-center" href="img360.html">Recorrido 360º</a></li>
             </ol>
             <h1 class="title fs-2">Información de interés</h1>
