--- a/html/historia/galeria.html
+++ b/html/historia/galeria.html
@@ -23,15 +23,15 @@
   <body>
     <!-- Panel Galería de imágenes -->
     <div class="flex_container">
-      <section class="container_info container_info_maps ps-5 pe-5">
+      <section class="container_info container_info_maps">
         <div class="container_button">
-          <button class="lang fs-4 fw-bolder" onclick="history.back()">
+          <button class="lang fs-5 fw-bolder" onclick="history.back()">
             Atrás
           </button>
-          <button class="lang fs-4 fw-bolder">Idioma</button>
+          <button class="lang fs-5 fw-bolder">Idioma</button>
         </div>
         <!-- contenedor de imagen central -->
-        <article class="contenedor galeria">
+        <article class="contenedor galeria ps-4 pe-4">
             <div class="img-ampliada slider">
               <img id="imgGalery" src="../../media/02_Jose_Arana.jpeg" alt="" />
             </div>
@@ -74,7 +74,7 @@
       </section>
       <nav class="nav_bar_maps">
         <h1
-          class="title fs-2 me-0 ms-0 h-md-25 mb-2 border-bottom border-white border-3 d-flex justify-content-center align-items-center"
+          class="title fs-2 pb-3 me-0 ms-0 h-md-25 mb-2 border-bottom border-white border-3 d-flex justify-content-center align-items-center"
         >
           Información de interés
         </h1>
