--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -15,12 +15,12 @@
 <body>
     <!-- Panel mapa de los dólmenes -->
     <div class="flex_container">
-        <section class="container_info ps-5 pe-5">
+        <section class="container_info">
             <div class="container_button">
-                <button class="lang fs-4 fw-bolder" onclick="history.back()">Atrás</button>
-                <button class="lang fs-4 fw-bolder">Idioma</button>
+                <button class="lang fs-5 fw-bolder" onclick="history.back()">Atrás</button>
+                <button class="lang fs-5 fw-bolder">Idioma</button>
             </div>
-            <article class="maps_container">
+            <article class="maps_container ps-4 pe-4">
                 <img src="#" alt="imágen del mapa">
             </article>
         </section>
