--- a/html/index.html
+++ b/html/index.html
@@ -15,20 +15,25 @@
 <body>
     <!--Panel principal-->
     <div class="flex_container">
-        <section class="container_info ps-5 pe-5">
-            <button class="lang fs-4 fw-bolder">Idioma</button>
-            <article class="text_container">
-                <h1 class="title fs-1">titulo principal</h1>
-                <p class="fs-3">*En este espacio incluiremos un texto que hable de proyecto y sirva de introducción.
-                    De fondo pondremos una foto del dolmen o del prado en el que está enterrado.</p>
+        <section class="container_info">
+            <button class="lang fs-5 fw-bolder">Idioma</button>
+            <article class="img-fondo">
+                <img src="../media/img-ejemplo.jpg" alt="">
+            </article>
+            <article class="text_container ps-4 pe-4">
+                <div>
+                    <h1 class="title fs-1">titulo principal</h1>
+                    <p class="fs-3">*En este espacio incluiremos un texto que hable de proyecto y sirva de introducción.
+                        De fondo pondremos una foto del dolmen o del prado en el que está enterrado.</p>
+                </div>
             </article>
         </section>
         <section class="conteiner_logo">
-            <img src="" alt="logo1">
-            <img src="" alt="logo2">
-            <img src="" alt="logo3">
-            <img src="" alt="logo4">
-            <img src="" alt="logo5">
+            <img src="../media/Itsaso herria - Marka.png" alt="logo1">
+            <img src="../media/Itsaso herria - Marka.png" alt="logo2">
+            <img src="../media/Itsaso herria - Marka.png" alt="logo3">
+            <img src="../media/Itsaso herria - Marka.png" alt="logo4">
+            <img src="../media/Itsaso herria - Marka.png" alt="logo5">
         </section>
         <nav class="nav_bar">
             <ol class="p-0 m-0">
