nuevos ajustes en CSS

--- a/html/historia/historia.html
+++ b/html/historia/historia.html
@@ -17,8 +17,8 @@
     <div class="flex_container">
         <section class="container_info container_info_dolmenes">
             <div class="container_button">
-                <button class="lang fs-5 fw-bolder" onclick="history.back()">Atrás</button>
-                <button class="lang fs-5 fw-bolder">Idioma</button>
+                <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
+                <button class="lang fw-bolder">Idioma</button>
             </div>
             <article class="overflow-auto contariner_cards_scroll pt-2 ps-4 pe-4">
                 <h1 class="title fs-1">titulo principal</h1>
@@ -50,9 +50,8 @@
         </section>
         <nav class="nav_bar nav_bar_dolmenes">
             <ol class="p-0 m-0">
-                <li class="button_nav_bar text_center"><a class="fs-2" href="mapa-dolmenes.html">Mapa de los dolmenes <br> <span class="sub_text fs-5">Mandubi, Trikuhazti I, Trikuhazti II eta Larrarte</span></a></li>
-                <li class="button_nav_bar text_center"><a class="fs-2" href="galeria.html">Galería de imágenes</a></li>
-                <li class="button_nav_bar text_center"><a class="fs-2" href="img360.html">Galería de imágenes 360º <br> <span class="sub_text fs-5">Una de cada uno de ellos menos Mandubi</span></a></li>
+                <li class="button_nav_bar"><a href="mapa-dolmenes.html">Mapa de los dolmenes <br> <span class="sub_text">Mandubi, Trikuhazti I, Trikuhazti II eta Larrarte</span></a></li>
+                <li class="button_nav_bar"><a href="img360.html">Galería de imágenes 360º <br> <span class="sub_text">Una de cada uno de ellos menos Mandubi</span></a></li>
             </ol>
         </nav>
     </div>
