--- a/html/historia/img360.html
+++ b/html/historia/img360.html
@@ -30,10 +30,10 @@
     <div id="ocultar-galeria" class="flex_container">
       <section class="container_info container_cards">
         <div class="container_button">
-          <button class="lang fs-5 fw-bolder" onclick="history.back()">
+          <button class="lang fw-bolder" onclick="history.back()">
             Atrás
           </button>
-          <button class="lang fs-5 fw-bolder">Idioma</button>
+          <button class="lang fw-bolder">Idioma</button>
         </div>
         <!-- contenedor de imagnes con información -->
         <div class="overflow-auto contariner_cards_scroll pt-2 ps-4 pe-4">
