--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
     <!--Panel principal-->
     <div class="flex_container">
         <section class="container_info">
-            <button class="lang fs-5 fw-bolder">Idioma</button>
+            <button class="lang fw-bolder">Idioma</button>
             <article class="img-fondo">
                 <img src="../media/img-ejemplo.jpg" alt="">
             </article>
@@ -37,9 +37,9 @@
         </section>
         <nav class="nav_bar">
             <ol class="p-0 m-0">
-                <li class="button_nav_bar"><a class="fs-2" href="../html/historia/historia.html">1. Historia de los dólmenes</a></li>
-                <li class="button_nav_bar"><a class="fs-2" href="../html/mandubi/mandubi.html">2. Dolmen de Mandubi</a></li>
-                <li class="button_nav_bar"><a class="fs-2" href="../html/investigacion/investigacion.html">3. Investigación</a></li>
+                <li class="button_nav_bar"><a href="../html/historia/historia.html">Historia de los dólmenes</a></li>
+                <li class="button_nav_bar"><a href="../html/mandubi/mandubi.html">Dolmen de Mandubi</a></li>
+                <li class="button_nav_bar"><a href="../html/investigacion/investigacion.html">Investigación</a></li>
             </ol>
         </nav>
     </div>
