--- a/html/investigacion/investigacion.html
+++ b/html/investigacion/investigacion.html
@@ -17,8 +17,8 @@
     <div class="flex_container"> <!-- cambiar -->
         <section class="container_info container_info_dolmenes">
             <div class="container_button">
-                <button class="lang fs-5 fw-bolder" onclick="history.back()">Atrás</button>
-                <button class="lang fs-5 fw-bolder">Idioma</button>
+                <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
+                <button class="lang fw-bolder">Idioma</button>
             </div>
             <article class="overflow-auto contariner_cards_scroll pt-2 ps-4 pe-4">
                 <h1 class="title fs-1">Investigación de la excavación de Mandubi</h1>
@@ -48,10 +48,10 @@
                     magni, id enim! Consectetur delectus quis aspernatur?</p>
             </article>
         </section>
-        <nav class="nav_bar nav_bar_dolmenes">
+        <nav class="nav_bar">
             <ol class="p-0 m-0">
-                <li class="button_nav_bar two_button text_center"><a class="fs-2" href="galeria.html">1. Galería de imágenes</a></li>
-                <li class="button_nav_bar two_button text_center"><a class="fs-2" href="img360.html">2. Imágen 360º</a></li>
+                <li class="button_nav_bar"><a href="galeria.html">Galería de imágenes</a></li>
+                <li class="button_nav_bar"><a href="img360.html">Imágen 360º</a></li>
             </ol>
         </nav>
     </div>
